chore: initial project commit without node_modules

--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+  "node": "22.x",
+  "npm": "10.x"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
