--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-  "node": "22.x",
-  "npm": "10.x"
-},
+    "node": "22.x",
+    "npm": "10.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "dotenv": "^17.2.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "helmet": "^8.1.0",
     "pg": "^8.11.3"
   }
 }
